exports[`test renders correctly checked 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "height": 45,
      "marginBottom": 5,
      "marginLeft": 10,
      "marginRight": 10,
      "marginTop": 5,
    }
  }>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
      }
    }>
    <View
      style={
        Object {
          "flex": 1,
        }
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#949494",
            "fontSize": 22,
            "marginLeft": 10,
            "textAlign": "left",
          }
        }>
        Test Checkbox
      </Text>
    </View>
    <RCTSwitch
      disabled={false}
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onValueChange={[Function]}
      style={
        Array [
          Object {
            "height": 31,
            "width": 51,
          },
          undefined,
        ]
      }
      value={true} />
  </View>
</View>
`;

exports[`test renders correctly unchecked 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "height": 45,
      "marginBottom": 5,
      "marginLeft": 10,
      "marginRight": 10,
      "marginTop": 5,
    }
  }>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
      }
    }>
    <View
      style={
        Object {
          "flex": 1,
        }
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#949494",
            "fontSize": 22,
            "marginLeft": 10,
            "textAlign": "left",
          }
        }>
        Test Checkbox
      </Text>
    </View>
    <RCTSwitch
      disabled={false}
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onValueChange={[Function]}
      style={
        Array [
          Object {
            "height": 31,
            "width": 51,
          },
          undefined,
        ]
      }
      value={false} />
  </View>
</View>
`;
